# imexam

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  appveyor.yaml  appveyor.yml  conftest.py  distribute_setup.py  ez_setup.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
cextern/xpa-2.1.15/: Makefile  conf.h  config.guess  config.sub  list
docs/: Makefile  conf.py  index.rst  make.bat  rtd-pip-requirements
docs/_static/: imexam.css
docs/imexam/: comparison_iraf.rst  current_capability.rst  dependencies.rst  description.rst  development.rst  example1.rst  example2.rst  example3.rst  example4.rst  example5.rst  imexam_command.rst  index.rst  iraf_commands.txt  iraf_imexam.rst  reference_api.rst  updates.rst  walkthrough.rst  xpa_commands.rst
docs/source/: commands.rst  conf.py  dependencies.rst  description.rst  development.rst  example2.rst  examples.rst
example_notebooks/: imexam_changing_models.ipynb  imexam_ds9_example.ipynb  imexam_ds9_photometry.ipynb  imexam_ginga_example.ipynb  imexam_just_plots.ipynb
imexam/: __init__.py  _astropy_init.py  conftest.py  connect.py  ds9_basic.py  ds9_viewer.py  ginga_viewer.py  imexam_defpars.py  imexamine.py  math_helper.py  util.py  xpa_wrap.py
imexam/htmlhelp/: commands.html  comparison_iraf.html  current_capability.html  dependencies.html  description.html  development.html  example1.html  example2.html  example3.html  example4.html  examples.html  genindex.html  index.html  iraf_imexam.html  np-modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  updates.html  xpa_commands.html
imexam/htmlhelp/_modules/: index.html
imexam/htmlhelp/_modules/imexam/: connect.html  ds9_basic.html  ds9_viewer.html  ginga_viewer.html  imexamine.html
imexam/htmlhelp/_sources/: commands.txt  comparison_iraf.txt  current_capability.txt  dependencies.txt  description.txt  development.txt  example1.txt  example2.txt  example3.txt  index.txt  iraf_imexam.txt  xpa_commands.txt
imexam/htmlhelp/_sources/api/: imexam.connect.Connect.txt  imexam.ds9_basic.ds9.txt  imexam.ds9_viewer.ds9.txt  imexam.ginga_viewer.ginga_mp.txt  imexam.imexamine.Imexamine.txt
imexam/htmlhelp/_sources/imexam/: comparison_iraf.txt  dependencies.txt  description.txt  development.txt  example1.txt  example2.txt  example3.txt  example4.txt  example5.txt  examples.txt  imexam_command.txt  index.txt  updates.txt  xpa_commands.txt
imexam/htmlhelp/_static/: bootstrap-astropy.css
imexam/htmlhelp/api/: imexam.connect.Connect.html  imexam.connect.Connect.rst  imexam.ds9_basic.ds9.html  imexam.ds9_viewer.ds9.html  imexam.ds9_viewer.ds9.rst  imexam.ginga_viewer.ginga_mp.html  imexam.imexamine.Imexamine.html
imexam/htmlhelp/imexam/: comparison_iraf.html  current_capability.html  dependencies.html  description.html  development.html  example1.html  example2.html  example3.html  example4.html  example5.html  examples.html  imexam_command.html  index.html  iraf_imexam.html  reference_api.html  updates.html  xpa_commands.html
imexam/tests/: coveragerc  setup_package.py  test_imexamine.py  test_util.py
licenses/: LICENSE.rst  LICENSE_AURA.rst  LICENSE_MIT.txt
wrappers/: xpa.pyx
