[metadata]
package_name = imexam
description = Astropy affiliated package
long_description = A package to help perform command-line image examination and plotting
author = Megan Sosey
author_email = sosey@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/imexam
description-file = README.rst
url = http://imexam.readthedocs.io/
homepage = http://imexam.readthedocs.io/


[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[ah_bootstrap]
auto_use = True

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build wrappers cextern
pep8ignore = E501 W391

[entry_points]
