[metadata]
package_name = imexam
description = Astropy affiliated package
long_description = A package to help perform command-line image examination and plotting
author = Megan Sosey
author_email = help@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/imexam
description-file = README.rst
url = http://imexam.readthedocs.io/
homepage = http://imexam.readthedocs.io/
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires >= 3.6
setup_requires = 
    setuptools_scm
    setuptools >= 30.3.0
packages =
    imexam
install_requires =
    numpy>=1.14
    scipy>=0.18
    astropy>=3.0
    matplotlib
zip_safe = false

[easy_install]
zip_ok = False

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx-astropy
    graphviz

tests =
    pytest

photometry =
    photutils

[build-system]
requires = ["cython"]

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
addopts = --doctest-ignore-import-errors
minversion = 2.2
norecursedirs = build docs/_build wrappers cextern
pep8ignore = E501 W391

[flake8]
exclude = extern
select = E101 W191 W291 W292 W293 W391 E11 E502 E722 E901 E902

