[metadata]
name = imexam
author = Imexam Developers
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/spacetelescope/imexam
github_project = spacetelescope/imexam
edit_on_github = False
description = A package to help perform command-line image examination and plotting
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires >= 3.6
setup_requires = setuptools_scm
install_requires =
    numpy>=1.14
    scipy>=0.18
    astropy>=3.0
    matplotlib

[options.extras_require]
all =
    photutils
test =
    pytest-astropy
docs =
    sphinx
    sphinx-astropy
    graphviz

[tool:pytest]
testpaths = "imexam" "docs"
norecursedirs =
    "docs[\/]_build"
    "docs[\/]generated"
    "imexam[\/]extern"
    wrappers
astropy_header = true
# doctest_plus = enabled
text_file_format = rst

[coverage:run]
omit =
    imexam/_astropy_init*
    imexam/conftest.py
    imexam/*setup_package*
    imexam/tests/*
    imexam/*/tests/*
    imexam/extern/*
    imexam/version*
    */imexam/_astropy_init*
    */imexam/conftest.py
    */imexam/*setup_package*
    */imexam/tests/*
    */imexam/*/tests/*
    */imexam/extern/*
    */imexam/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
exclude = extern
ignore = E501,F841,W504
